--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<p>This is a new repo.</p>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<title>Demo</title>
+</head>
+<body>
+	<p>This is a new repo.</p>
+	<p>This is a new feature (dropdown)</p>
+	<p>This is a new feature (button)</p>
+</body>
+</html>
